JSA avance de Dashboard de Anden

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -276,6 +276,7 @@
     <add key="PostCorteCaja" value="api/reportes/cortecaja"/>
     <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo"/>
     <add key="GetDashRemanente" value="api/reportes/dashboard/remanente"/>
+    <add key="GetDashCallCenter" value="api/reportes/dashboard/callcenter" />
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
