--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -139,6 +139,7 @@
     <Compile Include="DTOs\Reportes\CajaGeneral\CajaGeneralDTO.cs" />
     <Compile Include="DTOs\Reportes\CajaGeneral\RepCorteCajaDTO.cs" />
     <Compile Include="DTOs\Reportes\DashBoard\AdministracionDTO.cs" />
+    <Compile Include="DTOs\Reportes\DashBoard\AndenDTO.cs" />
     <Compile Include="DTOs\Reportes\GastoVehicular\GastoVehicularDTO.cs" />
     <Compile Include="DTOs\Reportes\GastoVehicular\RepGastoVehicularDTO.cs" />
     <Compile Include="DTOs\Reportes\InventarioConcepto\InventarioXConceptoDTO.cs" />
