--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -277,6 +277,8 @@
     <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo"/>
     <add key="GetDashRemanente" value="api/reportes/dashboard/remanente"/>
     <add key="GetDashCallCenter" value="api/reportes/dashboard/callcenter" />
+    <add key="GetDashAnden" value="api/reportes/dashboard/anden" />
+
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
