JSA - DashBoard (Terminado)
Se finalizan los DashBoard.
Falta generar código para identificar el tipo de perfil.
Se deja código para pruebas comentado.

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -278,7 +278,8 @@
     <add key="GetDashRemanente" value="api/reportes/dashboard/remanente"/>
     <add key="GetDashCallCenter" value="api/reportes/dashboard/callcenter" />
     <add key="GetDashAnden" value="api/reportes/dashboard/anden" />
-
+    <add key="GetCartera" value="api/reportes/dashboard/cartera" />
+    <add key="GetCajaGeneral" value="api/reportes/dashboard/cajageneral" />    
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
