JSA - Pagos de abonos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -253,6 +253,7 @@
     <add key="GetCFDIByCliente" value="api/facturacion/buscar/cfdi/cliente/" />
     <add key="GetCFDIByRFC" value="api/facturacion/buscar/cfdi/rfc/" />
     <add key="GetCFDIs" value="api/facturacion/buscar/cfdis" />
+    <add key="GetTimbrarPago" value="api/facturacion/registrar/factrua/pago/" />
     <!--Facturacion-->
     <!-- HistoricoVentas -->
     <add key="PostHistoricoVentas" value="api/historico/registar/historicoventas" />
