--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -171,7 +171,7 @@
     <add key="PostActulizarAlmacenProducto" value="api/almacen/actualiza/almacenproducto" />
     <add key="GetOrdenCompraEntrada" value="api/almacen/buscar/ordecompraentrada/" />
     <add key="GetProductosAlmacen" value="api/almacen/buscar/productos/" />
-    <add key="GetRequisiconAlmacen" value="api/almacen/buscar/almacen/requisicion/" />
+    <add key="GetrequisicionAlmacen" value="api/almacen/buscar/almacen/requisicion/" />
     <add key="GetRegistroAlmacen" value="api/almacen/buscar/registro/" />
     <add key="PostRemanenteGeneral" value="api/almacen/buscar/remanente/general" />
     <add key="GetRemanentePuntoVenta" value="api/almacen/buscar/remanente/puntoventa" />
