--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -76,6 +76,7 @@
     <add key="GetRegimenFiscal" value="api/catalogos/clientes/regimenfiscal" />
     <add key="GetListaClientes" value="api/catalogos/clientes/listaclientes/" />
     <add key="GetClientes" value="api/catalogos/clientes/listaclientes" />
+    <add key="PutClientesRfcTel" value="api/catalogos/buscar/clientesfilterrfc" />
     <add key="GetCliente" value="api/catalogos/cliente/buscar/" />
     <add key="PostRegistraClientes" value="api/catalogos/registra/cliente" />
     <add key="PutModificaClientes" value="api/catalogos/modifica/cliente" />
