--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -34,16 +34,13 @@
         android:supportsRtl="true"
         android:theme="@style/SagasTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".PictureActivity"></activity>
         <activity
             android:name=".Activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/SagasTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Activity.MainActivity"
@@ -96,7 +93,14 @@
             android:configChanges="orientation"
             android:label="@string/title_proceso_descarga"
             android:screenOrientation="portrait"
-            android:theme="@style/AppEnter" />
+            android:theme="@style/AppEnter" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".Activity.SubirImagenesActivity"
             android:configChanges="orientation"
