JSA-Avance Call Center

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11683,6 +11683,7 @@
     <Content Include="Views\Reportes\CorteCaja.cshtml" />
     <Content Include="Views\Reportes\GastoVehicular.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolTransporte.cshtml" />
+    <Content Include="Views\Pedidos\_Pedidos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
