JSA - Cambios en Clientes
Grid a DevExpress
Limite de credio
precio fijo

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11684,6 +11684,7 @@
     <Content Include="Views\Reportes\GastoVehicular.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolTransporte.cshtml" />
     <Content Include="Views\Pedidos\_Pedidos.cshtml" />
+    <Content Include="Views\Clientes\_Clientes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
