--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.example.neotecknewts.sagasapp"
+        applicationId "com.neotecknewts.sagasapp"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
