--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -281,7 +281,8 @@
     <add key="GetDashCallCenter" value="api/reportes/dashboard/callcenter" />
     <add key="GetDashAnden" value="api/reportes/dashboard/anden" />
     <add key="GetCartera" value="api/reportes/dashboard/cartera" />
-    <add key="GetCajaGeneral" value="api/reportes/dashboard/cajageneral" />    
+    <add key="GetCajaGeneral" value="api/reportes/dashboard/cajageneral" />
+    <add key="PostComisiones" value="api/reportes/comisiones" />
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
