--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -26,7 +26,7 @@
     <add key="webpages:Enabled" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebApiUrlBase" value="http://localhost:5469/" />
+    <add key="WebApiUrlBase" value="http://97.74.232.9:7012" />
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <!--Login-->
     <add key="PostLogin" value="api/seguridad/login" />
@@ -133,6 +133,10 @@
     <add key="PutModificaEgreso" value="api/catalogos/modifica/egreso" />
     <add key="PostRegistraEgreso" value="api/catalogos/registra/egreso" />
     <add key="PutEliminaEgreso" value="api/catalogos/elimina/egreso/" />
+    <add key="PostRegistraCuentaContableAutorizado" value="api/catalogos/registra/cuenta/contableautorizado" />
+    <add key="PutModificaCuentaContableAutorizado" value="api/catalogos/modifica/cuenta/contableautorizado" /> 
+    <add key="GetListaCuentasContablesAutorizado" value="api/catalogos/consulta/cuentas/contablesautorizado" />
+    <add key="GetCuentaContableAutorizado" value="api/catalogos/consulta/cuenta/contableautorizado/" />  
     <!--Catalogos-->
     <!--Requisicion-->
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
