--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Models\Almacen\RegistroDTO.cs" />
     <Compile Include="Models\Almacen\RemananteModel.cs" />
     <Compile Include="Models\Almacen\RemanenteGeneralDTO.cs" />
+    <Compile Include="Models\Almacen\RemanentePtoVentaDTO.cs" />
     <Compile Include="Models\Almacen\RequisicionSalidaDTO.cs" />
     <Compile Include="Models\Catalogos\BancoDTO.cs" />
     <Compile Include="Models\Catalogos\CamionetaModel.cs" />
