--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -180,6 +180,7 @@
     <add key="GetRegistroAlmacen" value="api/almacen/buscar/registro/" />
     <add key="PostRemanenteGeneral" value="api/almacen/buscar/remanente/general" />
     <add key="PostRemanentePuntoVenta" value="api/almacen/buscar/remanente/puntoventa" />
+    <add key="GetListaUnidadAlmacen" value="api/almacen/buscar/unidadalmacen" />
     <!-- Almacen -->
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
