--- a/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 20 12:24:20 CDT 2019
+#Sat Jul 20 18:29:02 CDT 2019
+ndk.dir=C\:\\Users\\NEOTECK-0619\\AppData\\Local\\Android\\Sdk\\ndk-bundle
 sdk.dir=C\:\\Users\\NEOTECK-0619\\AppData\\Local\\Android\\Sdk
